got the web app to run in docker

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,9 @@
-FROM python
+FROM python:3.7
 COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 COPY . /app
-ENTRYPOINT ["python3"]
-EXPOSE 5000/tcp
+ENTRYPOINT ["python"]
+EXPOSE 5001/tcp
 CMD ["app.py"]
