made app run with nginx

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,6 @@
-FROM python:3.7
+FROM tiangolo/uwsgi-nginx-flask:python3.8
 COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 COPY . /app
-ENTRYPOINT ["python"]
-EXPOSE 5001/tcp
-CMD ["app.py"]
