--- a/gene_data_explorer/Dockerfile
+++ b/gene_data_explorer/Dockerfile
@@ -3,4 +3,5 @@ COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+RUN export FLASK_APP=gene_data_explorer
 COPY . /app
