--- a/gene_data_explorer/Dockerfile
+++ b/gene_data_explorer/Dockerfile
@@ -1,5 +1,5 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.8
-COPY ./requirements.txt /app/requirements.txt
+COPY ./gene_data_explorer/requirements.txt /app/requirements.txt
 WORKDIR /app
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
