--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ gene_data.12-7-2020.sql
 .DS_Store
 gene_data_explorer/gene_data_explorer/static/clustergrammer/
 node_modules/
+c_elegans.PRJNA13758.WS279.geneOtherIDs.txt
