--- a/gene_data_explorer/Dockerfile
+++ b/gene_data_explorer/Dockerfile
@@ -6,10 +6,11 @@ RUN pip install -U -r requirements.txt
 RUN apt-get update
 RUN apt-get upgrade -y
 RUN apt-get install -y python-mysqldb default-mysql-client
+ENV RUNNING_IN_DOCKER=TRUE
 COPY . /app
-env FLASK_APP=gene_data_explorer
 EXPOSE 5000
-CMD flask run
+CMD ./run_flask.sh
+#CMD bash
 
 # FROM tiangolo/uwsgi-nginx-flask:python3.8
 # COPY ./gene_data_explorer/requirements.txt /app/requirements.txt
