--- a/gene_data_explorer/gene_data_explorer/requirements.txt
+++ b/gene_data_explorer/gene_data_explorer/requirements.txt
@@ -5,4 +5,12 @@ configparser
 flask-sqlalchemy
 flask-socketio
 mysqlclient
-clustergrammer
+clustergrammer2
+pymysql
+cryptography
+scipy
+sklearn
+scikit-learn
+matplotlib
+fastcluster
+statsmodels==0.11.1
