implemented google login, still need to limit which users are authorized

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ gene_data.12-7-2020.sql
 gene_data_explorer/gene_data_explorer/static/clustergrammer/
 node_modules/
 c_elegans.PRJNA13758.WS279.geneOtherIDs.txt
+clustergrammer
