--- a/.github/workflows/master_gene-data-explorer.yml
+++ b/.github/workflows/master_gene-data-explorer.yml
@@ -23,7 +23,7 @@ jobs:
         password: ${{ secrets.AzureAppService_ContainerPassword_153cea909abe41b585796616d7778f9b }}
 
     - run: |
-        docker build . -t "labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}"
+        docker build -t "labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}" .
         docker push "labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}"
 
     - name: Deploy to Azure Web App
