--- a/.github/workflows/master_gene-data-explorer.yml
+++ b/.github/workflows/master_gene-data-explorer.yml
@@ -23,8 +23,8 @@ jobs:
         password: ${{ secrets.AzureAppService_ContainerPassword_153cea909abe41b585796616d7778f9b }}
 
     - run: |
-        docker build -t "labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}" .
-        docker push "labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}"
+        docker build -t "labdockerregistry.azurecr.io/gene-data-explorer:${{ github.sha }}" .
+        docker push "labdockerregistry.azurecr.io/gene-data-explorer:${{ github.sha }}"
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -32,4 +32,4 @@ jobs:
         app-name: 'gene-data-explorer'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_c5c884824e774f3a83f78356838c8abe }}
-        images: 'labdockerregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_de313b1ffc2840d08f77762d7359b0e5 }}/gene-data-explorer:${{ github.sha }}'
+        images: 'labdockerregistry.azurecr.io/gene-data-explorer:${{ github.sha }}'
