--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,7 @@ jobs:
       - name: build and run container
         run: |
           docker build -t gene_data_explorer .
-          docker run docker run --rm \
-          -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-          -e AZURE_SQL_PASSWD=${{ secrets.AZURE_SQL_PASSWD }} -e AZURE_SQL_USERNAME=${{ secrets.AZURE_SQL_USERNAME }} -e LOGIN_DISABLED=True gene_data_explorer
+          docker run --rm -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} -e AZURE_SQL_PASSWD=${{ secrets.AZURE_SQL_PASSWD }} -e AZURE_SQL_USERNAME=${{ secrets.AZURE_SQL_USERNAME }} -e LOGIN_DISABLED=True gene_data_explorer
         
 
       # Runs a set of commands using the runners shell
