--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: build and run container
+        uses: satackey/action-docker-layer-caching@v0.0.11
         run: |
           docker build -t gene_data_explorer .
           docker run -d --rm --name gene_data_explorer -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} -e AZURE_SQL_PASSWD=${{ secrets.AZURE_SQL_PASSWD }} -e AZURE_SQL_USERNAME=${{ secrets.AZURE_SQL_USERNAME }} -e LOGIN_DISABLED=True gene_data_explorer
