--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - name: Docker Layer Caching
+        uses: satackey/action-docker-layer-caching@v0.0.11
       # Runs a single command using the runners shell
       - name: build and run container
-        uses: satackey/action-docker-layer-caching@v0.0.11
         run: |
           docker build -t gene_data_explorer .
           docker run -d --rm --name gene_data_explorer -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} -e AZURE_SQL_PASSWD=${{ secrets.AZURE_SQL_PASSWD }} -e AZURE_SQL_USERNAME=${{ secrets.AZURE_SQL_USERNAME }} -e LOGIN_DISABLED=True gene_data_explorer
