--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
       - name: run tests
         run: |
           docker exec -d gene_data_explorer sh 'pip install pytest'
-          docker exec gene_data_explorer sh 'cd /app/gene_data_explorer && pytest gene_data_explorer/test_.py'
+          docker exec gene_data_explorer bash -c 'cd /app/gene_data_explorer && pytest gene_data_explorer/test_.py'
           docker stop gene_data_explorer
