--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: run tests
         run: |
-          docker exec -d gene_data_explorer sh 'pip install pytest'
+          docker exec -d gene_data_explorer bash -c 'pip install pytest'
           docker exec gene_data_explorer bash -c 'cd /app/gene_data_explorer && pytest gene_data_explorer/test_.py'
           docker stop gene_data_explorer
