--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: run tests
         run: |
-          docker exec gene_data_explorer bash -c 'cd /app/gene_data_explorer && pytest gene_data_explorer/test_.py'
+          docker exec gene_data_explorer bash -c 'pytest gene_data_explorer/test_.py'
           docker stop gene_data_explorer
